# lalafell_bot

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  .travis_cache_check.sh  CONTRIBUTING.md  Cargo.toml  Makefile  Procfile  README.md  Vagrantfile  build.rs  rustfmt.toml
.docker/dockerfiles/: Dockerfile
.travis/: before_deploy.sh  build.sh  cache_check.sh  libsodium.sh  travis_ed25519.enc
archive_viewer/: .env  Cargo.toml
archive_viewer/src/: channel.rs  discordown.rs  helpers.rs  index.rs  main.rs  refresh.rs
archive_viewer/web/source/: main.scss  timestamps.coffee
archive_viewer/web/static/: main.css  timestamps.js
archive_viewer/web/templates/: attachment.hbs  channel.hbs  embed.hbs  index.hbs  message.hbs  pages.hbs
archive_viewer/web/templates/embed/: base.hbs  link.hbs  rich.hbs
bot_command_derive/: Cargo.toml
bot_command_derive/src/: lib.rs
migrations/20170713211703_create_tags/: up.sql
migrations/20170713212031_create_verifications/: down.sql  up.sql
migrations/20170713212654_create_timeouts/: down.sql  up.sql
migrations/20170713213506_add_last_updated/: down.sql  up.sql
migrations/20170715224016_create_messages/: up.sql
migrations/20170715224017_create_edits/: down.sql  up.sql
migrations/20170727211434_create_channel_configs/: down.sql  up.sql
migrations/20170727211533_create_server_configs/: down.sql  up.sql
migrations/20170727211845_reactions/: down.sql  up.sql
migrations/20170803234950_create_auto_replies/: down.sql  up.sql
migrations/20170803234957_create_delete_all_messages/: down.sql  up.sql
migrations/2018-01-06-173545_verification_cascade/: down.sql  up.sql
migrations/2018-01-08-061232_remove_message_tracking/: down.sql  up.sql
migrations/2018-01-09-071835_create_role_check_times/: down.sql  up.sql
migrations/2018-01-13-075134_add_presences/: down.sql  up.sql
migrations/2018-01-13-175347_add_administrators/: down.sql  up.sql
migrations/2018-01-13-201040_use_bigint/: down.sql  up.sql
migrations/2018-01-13-221753_add_log_channels/: up.sql
migrations/2018-01-14-234023_add_roles/: up.sql
migrations/2018-01-27-032045_use_role_ids/: down.sql  up.sql
migrations/2018-02-04-064618_create_tag_queue/: down.sql  up.sql
migrations/2018-03-21-123102_add_temporary_roles/: down.sql  up.sql
migrations/2018-03-21-135538_add_ephemeral_messages/: down.sql  up.sql
migrations/2018-10-11-201059_remove_party_finder/: down.sql  up.sql
src/: config.rs  database.rs  error.rs  filters.rs  lodestone.rs  logging.rs  main.rs  util.rs
src/bot/: data.rs  mod.rs
src/bot/creation/: data.rs  listeners.rs  mod.rs  tasks.rs
src/commands/: archive.rs  blob.rs  bot.rs  ephemeral_message.rs  fflogs.rs  image_dump.rs  mention.rs  mod.rs  party_finder.rs  ping.rs  presence.rs  race.rs  random_reaction.rs  reference_count.rs  reload_config.rs  report.rs  save_database.rs  search.rs  temporary_role.rs  verify.rs  version.rs  view_edits.rs  view_tag.rs  viewtag.rs
src/commands/audio/: join.rs  leave.rs  mod.rs  play.rs
src/commands/config/: configure.rs  mod.rs
src/commands/config/channel/: auto_reply.rs  delete_all_messages.rs  image_dump.rs  mod.rs
src/commands/config/server/: auto_reply.rs  delete_all_messages.rs  mod.rs  reaction.rs  timeout_role.rs
src/commands/config/server/auto_reply/: add.rs  list.rs  mod.rs  remove.rs
src/commands/config/server/delete_all_messages/: add.rs  list.rs  mod.rs  remove.rs
src/commands/config/server/reaction/: add.rs  list.rs  mod.rs  remove.rs
src/commands/music/: join.rs  leave.rs  mod.rs  pause.rs  play.rs  stop.rs
src/commands/params/: error.rs  mod.rs  test.rs
src/commands/params/helpers/: channel.rs  mention.rs  mod.rs
src/commands/polling/: mod.rs  poll.rs  poll_results.rs
src/commands/tag/: autotag.rs  mod.rs  queue_tag.rs  tag.rs  tag_command.rs  update_tag.rs  update_tags.rs
src/commands/timeout/: mod.rs  timeout_command.rs  untimeout.rs
src/database/: schema.rs
src/database/models/: administrators.rs  auto_replies.rs  delete_all_messages.rs  edits.rs  ephemeral_messages.rs  log_channels.rs  messages.rs  mod.rs  presences.rs  role_check_times.rs  roles.rs  tag_queue.rs  tags.rs  temporary_roles.rs  timeouts.rs  verifications.rs
src/database/models/config/: channel.rs  mod.rs  party_finder.rs  reactions.rs  server.rs
src/database/schema/: mod.rs
src/listeners/: auto_reply.rs  commands.rs  debugger.rs  guilds_ext.rs  log.rs  mod.rs  music.rs  party_finder.rs  poll_tagger.rs  random_presence.rs  reaction_authorize.rs  tag_instructions.rs  temporary_roles.rs  timeouts.rs  track_changes.rs
src/lodestone/: mod.rs
src/tasks/: autotag.rs  database_save.rs  delete_all_messages.rs  ephemeral_messages.rs  mod.rs  random_presence.rs  role_check.rs  tag_queue.rs  temporary_roles.rs  timeout_check.rs
