[package]
name = "lalafell_bot"
version = "0.1.0"
authors = ["Kyle Clemens <me@kyleclemens.com>"]

[dependencies]
ansi_term = "0.11"
bot_command_derive = { path = "./bot_command_derive" }
byteorder = "1.2"
chrono = { version = "0.4", features = ["serde"] }
ctrlc = { version = "3.0", features = ["termination"] }
diesel = { version = "1.0", features = ["postgres"] }
dotenv = "0.13"
envy = "0.3"
error-chain = "0.11"
fern = "0.5"
fflogs = { version = "*", git = "https://github.com/jkcclemens/fflogs_rs" }
reqwest = "0.8"
itertools = "0.7"
lalafell = { version = "*", git = "https://github.com/jkcclemens/lalafell" }
lazy_static = "1.0"
log = "0.4"
rand = "0.5"
scraper = "0.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
structopt = { version = "0.2", default-features = false }
typemap = "0.3"
unicase = "2"
url = "1.6"
uuid = { version = "0.6", features = ["v4"] }
xivdb = { version = "*", git = "https://github.com/jkcclemens/xivdb-rs" }
quote = { version = "0.6", optional = true }
syn = { version = "0.14", optional = true, features = ["full", "derive", "parsing", "printing", "visit", "visit-mut", "fold", "clone-impls", "extra-traits"] }

[dependencies.serenity]
version = "0.5"
git = "https://github.com/zeyla/serenity"
branch = "master"
default-features = false
features = ["builder", "cache", "client", "gateway", "model", "utils", "voice"]

[dependencies.ffxiv_types]
version = "0.2"
default-features = false
features = ["data_centers", "worlds", "roles", "combat_jobs"]

[features]
default = []
source = ["syn", "quote"]

[[bin]]
name = "lalafell_bot"

[[bin]]
name = "generate_handlers"
required-features = ["source"]

[build-dependencies]
git2 = "0.7"
