[package]
name = "lalafell_bot"
version = "0.1.0"
authors = ["Kyle Clemens <me@kyleclemens.com>"]
edition = "2018"

[dependencies]
ansi_term = "0.11"
bot_command_derive = { path = "./bot_command_derive" }
byteorder = "1"
chrono = { version = "0.4", features = ["serde"] }
ctrlc = { version = "3.0", features = ["termination"] }
diesel = { version = "1.0", features = ["postgres"] }
dotenv = "0.13"
envy = "0.4"
error-chain = "0.12"
failure = "0.1"
fern = "0.5"
fflogs = { version = "*", git = "https://github.com/jkcclemens/fflogs_rs" }
itertools = "0.8"
lalafell = { version = "*", git = "https://github.com/jkcclemens/lalafell" }
lazy_static = "1"
lodestone_api_client = { version = "*", git = "https://github.com/jkcclemens/lodestone_api_client" }
log = "0.4"
quote = { version = "0.6", optional = true }
rand = "0.6"
reqwest = "0.9"
scraper = "0.10"
serde = "1"
serde_derive = "1"
serde_json = "1"
structopt = { version = "0.2", default-features = false }
syn = { version = "0.15", optional = true, features = ["full", "derive", "parsing", "printing", "visit", "visit-mut", "fold", "clone-impls", "extra-traits"] }
typemap = "0.3"
unicase = "2"
url = "1"
uuid = { version = "0.7", features = ["v4"] }

[dependencies.serenity]
version = "0.6.0-rc.1"
default-features = false
features = ["builder", "cache", "client", "gateway", "model", "utils", "native_tls_backend"]

[dependencies.ffxiv_types]
version = "1"
default-features = false
features = ["data_centers", "worlds", "roles", "combat_jobs"]

[features]
default = []
source = ["syn", "quote"]

[[bin]]
name = "lalafell_bot"

[[bin]]
name = "generate_handlers"
required-features = ["source"]

[build-dependencies]
git2 = "0.8"

[patch.crates-io]
openssl = { git = "https://github.com/ishitatsuyuki/rust-openssl", branch = "0.9.x" }
